Bug 408440 - Landing page defaults eraser brush to 'off'
Summary: Landing page defaults eraser brush to 'off'
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: 5.2.6
Platform: Other Linux
: VLO minor
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-06-08 01:06 UTC by jimbo
Modified: 2024-11-15 09:19 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description jimbo 2019-06-08 01:06:09 UTC
SUMMARY
If you have an eraser brush selected prior from going from the landing page to a new document, it will switch off the erase toggle in the menu bar.

STEPS TO REPRODUCE
1. Open Krita, create a new document and select your eraser brush (notice the eraser tool is on in the main bar above the canvas). 
2. Close the document (you should be back at the landing page) and then open a new document again.

OBSERVED RESULT
The eraser brush has the erase option turned off.

EXPECTED RESULT
The eraser brush keeps its brush preset setting (eraser toggle on.

SOFTWARE/OS VERSIONS
Windows: X
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Not sure if this effects other options in the menu bar or just the eraser toggle.
Comment 1 jimbo 2019-06-08 01:08:32 UTC
Windows 7 Professional 64 bit
Comment 2 vanyossi 2019-06-08 04:03:26 UTC
The toggle becomes off but the presets still erases
Comment 3 jimbo 2019-06-12 04:29:34 UTC
(In reply to vanyossi from comment #2)
> The toggle becomes off but the presets still erases

This isn't always the case. Make sure that Krita is fully closed first, then open a .kra file. The eraser tool will paint down a colour.
Comment 4 Vitamorus 2024-11-12 14:22:54 UTC
Re-confirming for 5.2.6.

I can reproduce the bug as described in 4.2.1, but the situation has improved somewhat in 5.2.6. 

The toggle in the Toolbar seems to be set correctly between opening and closing documents without quitting Krita. If you quit Krita with an eraser brush selected, however, it will not be set correctly the next time you open Krita.

I could not get eraser brush to paint a colour in either version, however. Jimbo or someone else needs to provide more info whether they can reproduce that issue in a newer version or not.
Comment 5 jimbo 2024-11-15 04:02:54 UTC
You probably should create a new ticket for your issue. The issue I was talking about was specifically about the creating a new document from the landing page (i.e. resetting back to defaults when creating a new document and not having 'sticky' settings for the menu bar). I think what you want is for the menu bar options to be saved in the .kra file, which would be a separate issue entirely.
Comment 6 Dmitry Kazakov 2024-11-15 09:18:48 UTC
Git commit 24d9e932ecb7f4ed4f269f84e3efbd70f5047df4 by Dmitry Kazakov.
Committed on 15/11/2024 at 09:18.
Pushed by dkazakov into branch 'master'.

Make sure that eraser button is properly initialized on Krita start

We should initialize the button even when no node is active or no canvas is
yet present.

M  +5    -18   libs/ui/kis_paintop_box.cc

https://invent.kde.org/graphics/krita/-/commit/24d9e932ecb7f4ed4f269f84e3efbd70f5047df4
Comment 7 Dmitry Kazakov 2024-11-15 09:19:09 UTC
Git commit 1e6491128ed7f42d8b99f5be72422ac7c38df8da by Dmitry Kazakov.
Committed on 15/11/2024 at 09:19.
Pushed by dkazakov into branch 'krita/5.2'.

Make sure that eraser button is properly initialized on Krita start

We should initialize the button even when no node is active or no canvas is
yet present.

M  +5    -18   libs/ui/kis_paintop_box.cc

https://invent.kde.org/graphics/krita/-/commit/1e6491128ed7f42d8b99f5be72422ac7c38df8da