Make sure that eraser button is properly initialized on Krita start

We should initialize the button even when no node is active or no canvas is
yet present.

BUG:408440